[package]
name = "esp-hal-rmt-onewire"
version = "0.4.0"
edition = "2021"
description = "RMT adapter for onewire with esp-hal and embassy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonored/esp-hal-rmt-onewire"

[features]
default = []
search-masks = []
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
example-deps = [
    "dep:embassy-executor",
    "dep:esp-backtrace",
    "dep:esp-println",
    "dep:esp-bootloader-esp-idf",
    "dep:fixed",
    "dep:static_cell",
    "esp-hal/rt",
]
example-esp32c3 = [
    "example-deps",
    "esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-println/auto",
    "esp-bootloader-esp-idf/esp32c3",
]
example-esp32c6 = [
    "example-deps",
    "esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-println/auto",
    "esp-bootloader-esp-idf/esp32c6",
]

[dependencies]
embassy-futures = { version = "0.1.2" }
esp-hal = { version = "1.0.0", features = ["unstable"] }
embassy-executor = { version = "0.9.1", optional = true, features = [
    "arch-riscv32",
    "executor-thread",
] }
esp-backtrace = { version = "0.18.1", default-features = false, features = [
    "panic-handler",
    "println",
], optional = true }
esp-println = { version = "0.16.1", default-features = false, optional = true }
esp-bootloader-esp-idf = { version = "0.4.0", optional = true }
fixed = { version = "1.29.0", optional = true }
static_cell = { version = "2.1.0", optional = true }

[package.metadata.docs.rs]
features = ["esp32c3"]
default-target = "riscv32imc-unknown-none-elf"
targets = ["riscv32imc-unknown-none-elf"]
